fix for mock call subject of proxy type (identified by .$ in their type class name), if identified replace the parameter type by either class name from method definition, or subject probe or call entry probe info